<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sumit.dell_pc.sanisasakhis.LoginActivity">

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp"
        android:padding="8dp"
        android:text="@string/language"
        android:textSize="16dp"
        android:textStyle="bold" />

    <!--<com.google.android.gms.common.SignInButton-->
    <!--android:id="@+id/signin"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="50dp"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_margin="10dp"-->
    <!--android:textAllCaps="false"-->
    <!--android:textSize="15sp"-->
    <!--android:text="@string/common_signin_button_text_long" />-->

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:padding="2dp"
        android:src="@drawable/firebase_auth_120dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="6dp"
        android:text="FireBase Login"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

    <EditText
        android:id="@+id/uEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/etext_outline"
        android:hint="@string/email_id_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp" />

    <EditText
        android:id="@+id/uPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/etext_outline"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/bSignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/sbutton_outine"
                android:padding="12dp"
                android:text="SIGN IN"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/bSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/sbutton_outine"
                android:padding="12dp"
                android:text="SIGN UP"
                android:textColor="#FFFFFF" />
        </TableRow>
    </TableLayout>

    <!--<Button-->
    <!--android:id="@+id/bSignin"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="12dp"-->
    <!--android:background="@drawable/sbutton_outine"-->
    <!--android:padding="12dp"-->
    <!--android:text="SIGN IN"-->
    <!--android:textColor="#FFFFFF" />-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:layout_width="140dp"
            android:layout_height="2dip"
            android:layout_margin="12dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <View
            android:layout_width="145dp"
            android:layout_height="2dip"
            android:layout_margin="12dp"
            android:background="@android:color/darker_gray" />

    </LinearLayout>

    <Button
        android:id="@+id/signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:background="@android:color/white"
        android:ems="10"
        android:text="@string/signout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="12dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/common_google_signin_btn_icon_light_normal"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/disConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="12dp"
            android:background="@android:color/white"
            android:ems="10"
            android:text="@string/disconnect"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>
